# appctl

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  release-plz.toml
.github/workflows/: ci.yml  e2e-nvidia.yml  live-providers.yml  pages.yml  release-plz.yml  release.yml
crates/appctl/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/appctl-plugin-sdk/: CHANGELOG.md  Cargo.toml  README.md
crates/appctl-plugin-sdk/src/: ffi.rs  lib.rs  schema.rs
crates/appctl/src/: chat.rs  cli.rs  cloud.rs  config.rs  doctor.rs  events.rs  executor.rs  history.rs  init.rs  lib.rs  main.rs  mcp_server.rs  plugins.rs  run.rs  safety.rs  schema.rs  serve.rs  setup.rs  term.rs  tool_result_format.rs  tools.rs
crates/appctl/src/ai/: anthropic.rs  azure_openai.rs  google_genai.rs  mod.rs  openai_compat.rs  vertex.rs
crates/appctl/src/auth/: azure_ad.rs  gcloud.rs  mcp_bridge.rs  mod.rs  oauth.rs  provider.rs  verify.rs
crates/appctl/src/sync/: aspnet.rs  db.rs  django.rs  flask.rs  laravel.rs  mcp.rs  mod.rs  openapi.rs  rails.rs  strapi.rs  supabase.rs  url.rs
crates/appctl/tests/: e2e_db_postgres.rs  e2e_django_drf.rs  e2e_nvidia_nim.rs  e2e_openapi_fastapi.rs  end_to_end.rs  google_genai.rs  live_anthropic.rs  live_common.rs  live_gemini.rs  live_openai.rs  live_qwen.rs  live_vertex.rs  mock_oauth.rs  oauth_tokens.rs  openai_streaming.rs  plugin_loader.rs  provider_config.rs  sync_aspnet.rs  sync_db.rs  sync_django.rs  sync_laravel.rs  sync_openapi.rs  sync_rails.rs  sync_strapi.rs  sync_supabase.rs  sync_url_login.rs
crates/appctl/tests/fixtures/aspnet_app/Controllers/: PostsController.cs
crates/appctl/tests/fixtures/django_app/billing/: models.py  urls.py
crates/appctl/tests/fixtures/django_app/project/: settings.py
crates/appctl/tests/fixtures/laravel_app/database/migrations/: 2024_01_01_000000_create_posts_table.php
crates/appctl/tests/fixtures/laravel_app/routes/: api.php
crates/appctl/tests/fixtures/openapi/: petstore.json
crates/appctl/tests/fixtures/rails_app/db/: schema.rb
crates/appctl/tests/fixtures/strapi_app/src/api/article/content-types/article/: schema.json
docs/: design-tokens.css  index.html  style.css
docs-next/: astro.config.mjs  package-lock.json  package.json  remark-appctl-version.mjs  remark-prefix-base.mjs
docs-next/public/: robots.txt
docs-next/scripts/: build-og.mjs
docs-next/src/components/: AgentPromptCard.astro  HeroChat.astro  InstallTabs.astro  Landing.astro  ValueCards.astro
docs-next/src/content/docs/docs/: changelog.md  first-10-minutes.md  init.md  installation.md  introduction.md  provider-matrix.md  quickstart.md  security.md  troubleshooting.md
docs-next/src/content/docs/docs/api/: agent-events.md  http.md  websocket.md
docs-next/src/content/docs/docs/cli/: app.md  auth.md  chat.md  config.md  doctor.md  history.md  mcp.md  plugin.md  run.md  serve.md  setup.md  sync.md
docs-next/src/content/docs/docs/concepts/: agent-loop.md  mental-model.md  provenance-and-safety.md  sync-and-schema.md  tools-and-actions.md
docs-next/src/content/docs/docs/deploy/: docker.md  local.md  secrets-and-keys.md  server.md
docs-next/src/content/docs/docs/sources/: aspnet.md  choosing-a-sync-source.md  db.md  django.md  laravel.md  mcp.md  openapi.md  plugins.md  rails.md  strapi.md  supabase.md  url.md
docs-next/src/lib/: version.mjs
docs-next/src/pages/: index.astro
docs-next/src/styles/: starlight-overrides.css  tokens.css
docs/deploy/: index.html
docs/sources/aspnet/: index.html
docs/sources/db/: index.html
docs/sources/django/: index.html
docs/sources/laravel/: index.html
docs/sources/mcp/: index.html
docs/sources/openapi/: index.html
docs/sources/rails/: index.html
docs/sources/strapi/: index.html
docs/sources/supabase/: index.html
docs/sources/url/: index.html
examples/demos/aspnet-api/: Makefile  README.md
examples/demos/aspnet-api/Controllers/: ItemsController.cs
examples/demos/db-postgres/: .env.example  Makefile  README.md  docker-compose.yml  init.sql
examples/demos/django-drf/: Makefile  README.md
examples/demos/django-drf/billing/: models.py  serializers.py  urls.py  views.py
examples/demos/django-drf/billing/migrations/: 0001_initial.py
examples/demos/django-drf/project/: settings.py  urls.py
examples/demos/laravel-api/: Makefile  README.md  composer.json
examples/demos/laravel-api/app/Http/Controllers/: CommentController.php  PostController.php
examples/demos/laravel-api/app/Models/: Comment.php  Post.php
examples/demos/laravel-api/database/migrations/: 2024_01_01_000000_create_posts_table.php  2024_01_01_000001_create_comments_table.php
examples/demos/laravel-api/routes/: api.php
examples/demos/mcp-stdio/: README.md  package.json  server.mjs
examples/demos/openapi-fastapi/: .env.example  Makefile  README.md  main.py  openapi.json
examples/demos/rails-api/: Gemfile  Makefile  README.md  config.ru
examples/demos/rails-api/.appctl/: schema.json  tools.json
examples/demos/rails-api/app/controllers/api/v1/: comments_controller.rb  posts_controller.rb
examples/demos/rails-api/config/: application.rb  routes.rb
examples/demos/strapi/: Makefile  README.md
examples/demos/strapi/src/api/product/content-types/product/: schema.json
examples/demos/supabase/: .env.example  Makefile  README.md  docker-compose.yml  init.sql
examples/demos/url-login/: Makefile  README.md  app.py
examples/plugins/appctl-airtable/: Cargo.toml
examples/plugins/appctl-airtable/src/: lib.rs
extensions/vscode/: .vscodeignore  README.md  package-lock.json  package.json
extensions/vscode/src/: extension.ts
scripts/: dev-install.sh  validate-demos.sh  verify-all.sh  verify-matrix.toml  verify_all.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
web/src/: App.tsx  index.css
