[package]
name = "appctl-airtable"
version = "0.1.0"
edition = "2024"
publish = false
description = "Example out-of-tree appctl plugin — sync an Airtable base"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
appctl-plugin-sdk = { path = "../../../crates/appctl-plugin-sdk" }
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "http2", "charset"] }
